--- a/style/projects.css
+++ b/style/projects.css
@@ -1,5 +1,5 @@
 .projects {
-  min-height: 100vh;
+  min-height: 95vh;
   max-width: 1280px;
   margin: 0 auto;
   display: -webkit-box;
@@ -15,6 +15,7 @@
   margin: 0;
   font-weight: lighter;
   width: 100%;
+  margin: 40px 0;
 }
 
 .projects .project {
@@ -191,10 +192,16 @@
   width: 120px;
   height: 30px;
   border: 2px solid white;
-  background-color: red;
   border-radius: 20px;
   font-weight: bold;
   margin-top: 20px;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.projects .project__link:hover {
+  background-color: white;
+  color: black;
 }
 
 @media (min-width: 550px) {
@@ -234,5 +241,28 @@
 
 .projects .project__link i {
   padding: 0 10px;
+}
+
+.projects__information {
+  width: 100%;
+  text-align: center;
+  margin: 10px 0;
+  font-size: .8rem;
+  padding: 0 20px;
+  line-height: 1.5rem;
+}
+
+@media (min-width: 560px) {
+  .projects__information {
+    font-size: 1rem;
+    margin: 30px 0;
+  }
+}
+
+.projects__information a {
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: none;
 }
 /*# sourceMappingURL=projects.css.map */
