--- a/style/loader.css
+++ b/style/loader.css
@@ -5,7 +5,7 @@
   z-index: 100000;
   top: 0;
   left: 0;
-  background-color: #242f3f;
+  background-color: #000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
