--- a/style/loader.scss
+++ b/style/loader.scss
@@ -5,7 +5,7 @@
     z-index: 100000;
     top: 0;
     left: 0;
-    background-color: #242f3f;
+    background-color: #000;
     display:flex;
     justify-content: center;
     align-items: center;
