--- a/style/concerts-style/concerts.scss
+++ b/style/concerts-style/concerts.scss
@@ -1,5 +1,5 @@
 .concertSection{
-    background-image: url('../concerts.jpg');
+    background-image: url('photos/concerts.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
