--- a/style/contact-style/contact.scss
+++ b/style/contact-style/contact.scss
@@ -1,5 +1,5 @@
 .contactSection{
-    background-image: url('../contactPhoto.jpg');
+    background-image: url('./photos/contactPhoto.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
