--- a/style/mainPage-style/mainPage.scss
+++ b/style/mainPage-style/mainPage.scss
@@ -1,7 +1,7 @@
 .mainPage{
     height: 100vh;
     max-width: 100vw;
-    background-image: url('../mainPhoto.jpg');
+    background-image: url('photos/mainPhoto.jpg');
     background-position: right;
     background-size: cover;
     background-attachment: fixed;
